[gd_scene load_steps=11 format=3 uid="uid://b27cg6sforp66"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_620gs"]
[ext_resource type="Shader" uid="uid://dm8gkgab7s5aj" path="res://shader/hit_flash.tres" id="2_nsx6n"]
[ext_resource type="Texture2D" uid="uid://d3kqy1ahxx6rs" path="res://src/sword 16_16.png" id="3_ytm78"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dxdu1"]
radius = 15.5
height = 64.5

[sub_resource type="CircleShape2D" id="CircleShape2D_xjuus"]
radius = 39.29

[sub_resource type="CircleShape2D" id="CircleShape2D_gx26g"]
radius = 155.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_regoi"]
resource_local_to_scene = true
shader = ExtResource("2_nsx6n")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_7ldul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qbuc5"]
resource_name = "flash_mob"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3feu4"]
_data = {
"RESET": SubResource("Animation_7ldul"),
"flash_mob": SubResource("Animation_qbuc5")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(-1, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_620gs")

[node name="enemy_size" type="CollisionShape2D" parent="."]
modulate = Color(1, 0.0431373, 1, 1)
self_modulate = Color(1, 0.0117647, 1, 1)
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_dxdu1")
debug_color = Color(1, 0.278431, 0.866667, 0.419608)

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_xjuus")
debug_color = Color(1, 0.458824, 0, 0.419608)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="radar" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_gx26g")

[node name="EAttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_regoi")
position = Vector2(1, 0.499999)
scale = Vector2(1.875, 3.9375)
texture = ExtResource("3_ytm78")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3feu4")
}

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="EAttackCooldown" to="." method="_on_e_attack_cooldown_timeout"]
